crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__list_minus_newlines_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "[K,\n]-i\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            (BeginList UpperIdent=>UpperIdent@1 EndList)
            InlineBinOpMinus=>OpBinaryMinus@4
            Ident=>LowerIdent@5
        EndBinOpMinus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(List([UpperIdent("K")]), Minus, Ident("i"))

[=== formatted below ===]

