crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__lowest_float_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "-179769313486231570000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000.0\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr Float=>Float@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Float("-179769313486231570000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000.0")

[=== formatted below ===]

