crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__lowest_int_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "-9223372036854775808\n"
---
(BeginFile (BeginTopLevelDecls HintExpr Num=>Int@0 EndTopLevelDecls) EndFile)

[=== canfmt below ===]
IntBase10("-9223372036854775808")

[=== formatted below ===]

