crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__minimal_app_header_header.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "app \"test-app\" provides [] to \"./blah\"\n\n"
---
(BeginFile
    (BeginHeaderApp
        String=>String@1
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
        String=>String@6
    EndHeaderApp)
    (BeginTopLevelDecls EndTopLevelDecls)
EndFile)

[=== canfmt below ===]


[=== formatted below ===]

