crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__minus_twelve_minus_five_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "-12-5\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Num=>IntBase10@0
            InlineBinOpMinus=>OpBinaryMinus@1
            Num=>IntBase10@2
        EndBinOpMinus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(IntBase10("-12"), Minus, IntBase10("5"))

[=== formatted below ===]

